--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
     "vuepress": "1.8.2",
     "vuepress-theme-reco": "1.6.6"
   },
-  "description": "Likcen 的个人博客"
+  "description": "Likcen 的个人博客",
+  "dependencies": {
+    "@vuepress-reco/vuepress-plugin-comments": "^1.6.0",
+    "vue-class-component": "^7.2.6",
+    "vuepress-plugin-meting": "^0.3.1"
+  }
 }
